@@ -151,6 +151,8 @@ Changes since 2.2.2
 55. slsh/lib/rline/editfuns.sl: Used functios in change #54 to implement
     bskip_word and skip_word readline functions.
 56. src/slstrops.c: Added isascii, and updated docs.
+57. src/sldisply.c: _pSLtt_cmdline_mode_reset will also clear to the
+    end of the screen.
 
 {{{ Previous Versions
 
